[package]
name = "ecs_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
async-compat = "0.2.1"
bevy = "0.8.0"
crossbeam-channel = "0.5.6"
ethers = { version = "0.17.0", features = ["abigen", "ws", "openssl"], default-features = false }
futures-lite = "1.12.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0.143"
serde_yaml = "0.9.4"
